@@ -1,7 +1,7 @@
 6071edd604dbeb75308cfbedc7790398 *cleanup
 30a444c58adaf9b99783d22d75d60c61 *configure
 cad112e8e53af0dfd84b3ee1edf2f9f7 *DESCRIPTION
-69f274874e425894f9bfe67896354bdc *inst/NEWS.Rd
+44ee4ce3bc8da98187f9d163a191c6ad *inst/NEWS.Rd
 a87b0f223435ed35607e8514562b8bfe *LICENSE
 5df28320757432a550ff962f2f1aed20 *man/charToFact.Rd
 8f19a2c9feb2f352580fd4892650f285 *man/count.Rd
@@ -12,24 +12,24 @@ d143e1321d840bb810d9648e54e22c9c *man/fpos.Rd
 ef4ce6330a0f6a2ec63ccfd365729963 *man/psort.Rd
 d4128b3f90218c0efd0d4bbf0f84d6a5 *man/psum.Rd
 14e3add07190fd18d0161f4f0b0b5257 *man/setlevels.Rd
-827ec1bb4ab2c5764717d8866d1a1585 *man/topn.Rd
+54f91d543a10f8c9aef7082da2b86de7 *man/topn.Rd
 3c628c2a27764ec5df2b4980921c310f *man/vswitch.Rd
 8960e9e411b8ff99c638d49e3f28e334 *NAMESPACE
-017d5422d45d51565103a969bcf231b4 *R/call.R
+f6f779e6889ed47cc0643d6b38cc75ba *R/call.R
 fa0ca12018176564236efd16b8d8e9d8 *README.md
 4826023c3ffe528db5e2af5db2a84b5a *src/dup.c
 e86a1960c335e7d534a4683b52d8b70c *src/dupLen.c
 84dc17b4330566e5beb69626ad9d268e *src/fpos.c
 c362509861cd6835c1d8adbb0dce02b4 *src/iif.c
 570337075c0d8e811f3de55d56b03210 *src/init.c
-fd6cda120996057e4520025e191ddaab *src/kit.h
+e3ea9be2e32c5fb411216fd37cb882a4 *src/kit.h
 63b898312ccf39a20bd7fbd8dcca5621 *src/Makevars.in
 95e3011e37d9dde0d75f3a3819b2acd3 *src/Makevars.win
 8e997b5d5d44af5cea7eafb48a4b9745 *src/nswitch.c
-786acb6d41d5041bd895a25211fa4cdd *src/psort.c
+44d12419075f21568aa9803fcee28c2e *src/psort.c
 44018b12fca6cccaabcd0f10deb421e4 *src/psum.c
-75f88aa2b5fbc936c6de93efaa8ff236 *src/topn.c
+e998e820fea6aa677e78a8cb1f7ba74c *src/topn.c
 c0f3fe6fca4e8492277a0d5f87528ce5 *src/utils.c
 3476a1e2381bb86f68a72844ee61bc7b *src/vswitch.c
-3cd12c2c6e4c85ff071e311b2fefa844 *tests/test_kit.R
-b93b412681e553032721458cd31d5811 *tests/test_kit.Rout.save
+f6e2cbfa7a0a372d9b09eb1dec27a9e7 *tests/test_kit.R
+8e26a0f73a772928778a7d15391001f4 *tests/test_kit.Rout.save
